# prisma_tools

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  sample-copy-objects.yml  setup.cfg
prisma_tools/: __init__.py  add_objects.py  cli.py  clone.py  diff.py  migrate.py  utils.py
tests/: pa-tests.xml  test_funcs.py  test_migrate.py
