[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prisma-tools"
# dynamic = ["version"]
version = "0.0.1"
description = "Tools for Prisma Access (Cloud Managed)"
readme = "README.md"
# license = "GPL-3.0-or-later"
dependencies = ["typer==0.7.0","requests==2.28.2","lxml==4.9.2"]
requires-python = ">=3.9"
authors = [{ name = "Ryan Gillespie", email = "rgillespie@gmail.com" }]
keywords = ["automation", "infrastructure", "network"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.optional-dependencies]
dev = ["pytest==7.2.1","black==22.12.0", "isort==5.12.0"]

[project.scripts]
ptools = "prisma_tools.cli:app"

[tool.isort]
profile = "black"